enhanced build.sbt