@@ -11,7 +11,11 @@ libraryDependencies ++= {
     "org.scalatest" %% "scalatest" % "3.2.19" % Test
   )
 }
-javaOptions ++= Seq(
+Compile / javaOptions ++= Seq(
+  "--enable-native-access=ALL-UNNAMED",
+  "--enable-native-access=javafx.graphics"
+)
+Test / javaOptions ++= Seq(
   "--enable-native-access=ALL-UNNAMED",
   "--enable-native-access=javafx.graphics"
 )
